--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -292,6 +292,8 @@ nocite: |
 ### Stomatal conductance
 
 Exposed-sun-leaves, though equipped with thermoregulatory traits are largely constrained by $gs$ than shade-leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020] where although evapotranspiration and $gs$ peak during the day, during the midday and afternoon $gs$ declines more steeply in sun-leaves resulting in increased $T_{leaf}$ [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b; @kosugiSeasonalFluctuationsTemperature2006]. However, $T_{opt}$ of $gs$ doesnot vary between sun and shade leaves [Slot et al. 2019]. The diurnal $gs$ pattern and resulting $A_{max}$ varies between species, for example, $gs$ is greater in angiosperms than gymnosperms [@bonan_ecological_2016; @kleinStomatalSensitivityCO22019].
+
+
 ### Photosynthesis
 
 **Photosynthesis is generally higher in exposed canopy positions-- a fact that is both theoretically expected and observed in numerous field studies (Table 2; Niinemets 2007 ; Kenzo et al. 2015 ; Slot et al. 2019; Chen et al. 2020).**
@@ -302,9 +304,9 @@ In response to the greater light availability, sun-leaves have traits allowing g
 Temperature can affect photosynthesis via direct and indirect pathways. Direct, by altering photosynthetic enzyme activity and electron transport chain, and indirectly through increase in $T_{leaf}$ from $gs$ closure that is driven by biophysical factors [@lloydEffectsRisingTemperatures2008]. $T_{leaf}$ beyond photosynthetic $T_{opt}$, declines photosynthesis due it's peaked response to temperature. Photosynthesis is commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; @slotSituTemperatureResponse2017). Beyond the optimum, photosynthesis decreases as a result of stomatal closure and increasing $T_{leaf}$ (e.g. @slotSituTemperatureResponse2017; Smith et al. 2020 [temperate/boreal refs needed) and eventually due to biochemical constraints (@kumarathungeAcclimationAdaptationComponents2019a; e.g. Sage & Kubien 2007; Varhammer et al. 2015 ). Leaf heat stress at $40-60{^\circ}C$ can cause irreversible damage to photosystem [II] leading to leaf necrosis and eventually leaf death [Baker 2008; @feeley_thermal_2020].  
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
-Biophysically, we might expect sun-leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*), where earlier evidence showed that $T_{opt}$ of $J_{max}$ increased with irradiance in an upper-canopy leaf compared to shaded lower-canopy leaf [@niinemetsShapeLeafPhotosynthetic1999; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of $V_{max}$ and $J_{max}$ didnot vary for tropical sun- and shade-leaves  [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020], and along the vertical gradient of tropical and temperate trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021;@mau_temperate_2018]. 
+Biophysically, we might expect sun-leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*; @niinemetsShapeLeafPhotosynthetic1999; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of $V_{max}$ and $J_{max}$ didnot vary for tropical sun- and shade-leaves  [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020], and along the vertical gradient of tropical and temperate trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021;@mau_temperate_2018]. 
 
-Interestingly, within canopy Japanese oak sun and shade leaves under respective peak light conditions were found to maintain similar rate of excess energy production. Excessive light energy not utilized can cause photoinhibition.Thus, sun leaves utilize this excess energy through high electron transport rate ($ETR$) and thermal dissapation, whereas shade leaves compensate for low $ETR$ by adjusting their $N_{area}$ to maintain high photosythetic capacity than those required to maximize C net gain, a suggested mechanism for cirucmventing photoinihition and thermal dissaptation under sunflecks [@kitaoLeavesJapaneseOak2012; @kitaoCanopyNitrogenDistribution2018]. Perhaps, differences in these thermal stablization strategies realizes similar $T_{opt}$ for photosynthesis in sun and shade leaves. 
+Interestingly, within canopy Japanese oak sun and shade leaves were found to maintain similar rate of excess energy production under respective peak light conditions. Excessive light energy not utilized can cause photoinhibition. Thus, sun leaves utilize this excess energy through high electron transport rate ($ETR$) and thermal dissapation, whereas shade leaves compensate for low $ETR$ by adjusting their $N_{area}$ to maintain high photosythetic capacity than those required to maximize C net gain, a suggested mechanism for cirucmventing photoinihition and thermal dissaptation under sunflecks [@kitaoLeavesJapaneseOak2012; @kitaoCanopyNitrogenDistribution2018]. Perhaps, differences in these thermal stablization strategies realizes similar $T_{opt}$ for photosynthesis in sun and shade leaves. 
 
 **Leaf photosynthetic thermal tolerance (Tcrit/ T50)**
 
@@ -327,7 +329,7 @@ Across species, $T_{50}$ is explained less by phylogeny [Slot et al. 2021; Perez
 **Similar to photosynthesis, respiration tends to be higher in canopy sun-leaves (Chen et al. 2020), but temperature sensitivity of respiration--$Q_{10}$--shows no definite trend along the gradient [@bolstad_foliar_1999; Weerasinghe et al.2014].**
 
 A few studies have found $Q_{10}$ to be greater in upper-canopy leaves than in shaded lower-canopy leaves, with significant differences among species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996], whereas Griffin et al. 2002 found that in Populas deltoides, lower canopy leaf respiration was more sensitive to changes in $T_{air}$ than upper canopy. Other studies have observed no difference in $Q_{10}$ across species vertical profiles and seedling sun vs. shade leaves [@weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008], although at Coweeta, temperate trees showed a slight tendency to increase down the canopy relative to upper-canopy leaves as $T_{air}$ increased [@bolstad_foliar_1999](*see their Fig. 1*). (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). @bolstad_foliar_1999 also found evidence of acclimation, but there remained a declining trend of respiration with elevation.
-Furthermore, response of respiration to $T_{leaf}$ [partially represented  by $E_{0}$] showed no variation in canopy positions of Quercus rubra, whereas on considering site differences, canopy-position effect in respiration was much greater in mesic sites, and seasonal effect was greater in drier sites [@xuSeasonalVariationTemperature2006].  
+Furthermore, response of respiration to $T_{leaf}$ [partially represented  by $E_{0}$] also showed no variation in canopy positions of Quercus rubra, whereas on considering site differences, canopy-position effect in respiration was much greater in mesic sites, and seasonal effect was greater in drier sites [@xuSeasonalVariationTemperature2006].  
 
  
 ### VOC production
@@ -388,14 +390,14 @@ The complex interactions of the biophysical environment and biological--leaf tra
 
 ### canopy disturbance and warming
 
-Canopies are crucial to microclimatic functioning, as they buffer several aspects of the microenvironment [Zelleweger et al. 2019]. This buffering is influenced by the hydraulogical-cycle at large [Davis et al. 2019], therefore severe droughts place canopies at risk, particularly larger trees that suffer more during droughts[Bennett et al. 2015]. Further, increase in global temperatures has shown that canopies of temperate and tropical forests function close to thermal threshold and beyond photosynthetic optimas [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Increase in such canopy $T_{leaf}$ reduces forest GPP [Pau et al. 2018], specifically in the tropics where thermal limits are narrower than temperate forests [Perez and Feeley, 2018]. Further, warm-season associated with increased VPD, along with drought exacerbates tree stress at a regional scale, with implications for forest structure [@parkwilliamsTemperaturePotentDriver2013]
+Canopies are crucial to microclimatic functioning, as they buffer several aspects of the microenvironment [Zelleweger et al. 2019]. This buffering is influenced by the hydraulogical-cycle at large [Davis et al. 2019], therefore severe droughts place canopies at risk, particularly larger trees that suffer more during droughts[Bennett et al. 2015]. Further, increase in global temperatures has shown that canopies of temperate and tropical forests function close to thermal threshold and beyond photosynthetic optimas [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Increase in such canopy $T_{leaf}$ reduces forest GPP [Pau et al. 2018], specifically in the tropics where thermal limits are narrower than temperate forests [Perez and Feeley, 2018]. A combination of warm-season associated with increased VPD, along with drought exacerbates tree stress at a regional scale, with implications for forest structure [@parkwilliamsTemperaturePotentDriver2013]
 [**to include Teskey 2015; Breashers et al. 2021**]
 
 Canopy structure affects understory species composition and soil fertility which has been shown to shift under macroclimatic warming and canopy disturbance [@majasalmiImpactTreeCanopy2020; @bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]. Macroclimatic warming will disproportionately affect the less warm-adapted functional types within the forest canopy, despite buffering dampening extreme effects, essentially creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), with associated understory plant thermophilization (death is faster than recruitment and growth) [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013]. This imposes an increasing threat to fauna in microrefugias that are  otherwise buffered from extremes [@scheffersMicrohabitatsReduceAnimal2013].
 
 Warming shifts forest composition, from leaf metabolism to whole forest structure. At a leaf metabolism level, fluxnet global analysis shows that with temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum, beyond this inflection point, photosynthesis declines whereas respiration increases exponentially, therfore, moving from carbon sink to carbon source, independent of water and irradiance [@duffyHowCloseAre2021]. This can also potentially alter species thermoregulation [@sastry_leaf_2018]. Temperature driven photosynthesis limitation is also reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Feedback loops from loss of big trees through natural disturbance or anthropogenic (e.g.@senfCanopyMortalityHas2018a, 2020;  @mcdowellMechanismsPlantSurvival2008; Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a] would increase canopy roughness, and reductions in canopy cover is associated with reduced canopy structural complexity [@senfMappingForestDisturbance2020]. Leading to altered biophysical gradient with local heating effects [@zellweger_forest_2020; @starkReframingTropicalSavannization2020], non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. 
 
-While climate change driven forest shifts are observed, certain forests are more resilient to warming and droughts than others, such as African rainforests [Amy Bennett's new paper]. Forest resiliency is also observed through increasing temperature acclimation among tropical and boreal species [martijn's papers; Danielle Way's papers; Atkin's papers] and reversible recovery of canopy heat stress [Smith et al. 2020] among other mechanisms [for eg. *REF*]
+In the face of global climate change, certain forests, such as African rainforests [Amy Bennett's new paper] are more resilient to warming and drought than other temperate and tropical forests. Additionally, increasing temperature acclimation among tropical and boreal species [martijn's papers; Danielle Way's papers; Atkin's papers] and reversible recovery of canopy heat stress [Smith et al. 2020] among other mechanisms [for eg. *REF*], point towards rays of hope.
 
 These shifts in forest structure at large may be detectable by lidar and thermal remote sensing. If we know how metabolism maps to the thermal profile, then the observed forest structural changes can inform prediction of forest function.
  
