--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -397,7 +397,7 @@ Canopy structure affects understory species composition and soil fertility which
 
 Warming shifts forest composition, from leaf metabolism to whole forest structure. At a leaf metabolism level, fluxnet global analysis shows that with temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum, beyond this inflection point, photosynthesis declines whereas respiration increases exponentially, therfore, moving from carbon sink to carbon source, independent of water and irradiance [@duffyHowCloseAre2021]. This can also potentially alter species thermoregulation [@sastry_leaf_2018]. Temperature driven photosynthesis limitation is also reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Feedback loops from loss of big trees through natural disturbance or anthropogenic (e.g.@senfCanopyMortalityHas2018a, 2020;  @mcdowellMechanismsPlantSurvival2008; Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a] would increase canopy roughness, and reductions in canopy cover is associated with reduced canopy structural complexity [@senfMappingForestDisturbance2020]. Leading to altered biophysical gradient with local heating effects [@zellweger_forest_2020; @starkReframingTropicalSavannization2020], non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. 
 
-In the face of global climate change, certain forests, such as African rainforests [Amy Bennett's new paper] are more resilient to warming and drought than other temperate and tropical forests. Additionally, increasing temperature acclimation among tropical and boreal species [martijn's papers; Danielle Way's papers; Atkin's papers] and reversible recovery of canopy heat stress [Smith et al. 2020] among other mechanisms [for eg. *REF*], point towards rays of hope.
+In the face of global climate change, resiliency among forests are also observed, such as African rainforests [Amy Bennett's new paper] that are more resilient to warming and drought than other forests. Increasing temperature acclimation among tropical and boreal species [martijn's papers; Danielle Way's papers; Atkin's papers] and reversible recovery of canopy heat stress [Smith et al. 2020] are other mechanisms [for eg. *REF*] that will help cope with warming.
 
 These shifts in forest structure at large may be detectable by lidar and thermal remote sensing. If we know how metabolism maps to the thermal profile, then the observed forest structural changes can inform prediction of forest function.
  
