--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -349,16 +349,16 @@ Vertical gradients in the biophysical environment shape which plant strategies, 
 **Vertical gradients affect tree recruitment, growth and survival, and how these respond to climatic variation.**
 More interesting in this context is how these shape differences in the climatic sensitivity of growth and mortality. There are numerous demographic differences between understory and canopy trees, which have been linked to both the physical environment and plant traits (e.g., REFS), *and we will not review those here.* *(although maybe we should put one paragraph?)*
 
-Biophysical conditions can alter tree-water dynamics and growth patterns. Greater $VPD$, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests,  as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Along with greater VPD, increase in temperature even under adequete water can cause greater tree hydraulic stress due to altered soil-water dynamics than milder drought, in temperate species. Recovery time from heat stress varies between species hydraulic traits [@ruehrWaterAvailabilityDominant2016; @parkwilliamsTemperaturePotentDriver2013]. Whereas, greater $RH$ can do the opposite, where it stifles evapotranspiration thereby increasing $T_{leaf}$ [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979]. Altered precipitation regimes causing drought is more detrimental to larger trees more than small trees, because limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [Norway spruce study, @bennettLargerTreesSuffer2015; @mcgregor_tree_nodate; @bartholomewSmallTropicalForest2020]. However, given adequate moisture to sustain high $g_s$, canopy leaves exposed to more wind and lower humidity should be more effective at cooling when $T_{air}$ exceeds physiological optima (Fig. `r fig_leaf_T`).
+Biophysical conditions can alter tree-water dynamics and growth patterns. Greater $VPD$, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests,  as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Along with greater VPD, increase in temperature even under adequete water can cause greater tree hydraulic stress due to altered soil-water dynamics than milder drought, in temperate species [@ruehrWaterAvailabilityDominant2016; @parkwilliamsTemperaturePotentDriver2013]. Whereas, greater $RH$ can do the opposite, where it stifles evapotranspiration thereby increasing $T_{leaf}$ [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979]. Altered precipitation regimes causing drought is more detrimental to larger trees more than small trees, because limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [Norway spruce study, @bennettLargerTreesSuffer2015; @mcgregor_tree_nodate; @bartholomewSmallTropicalForest2020]. However, given adequate moisture to sustain high $g_s$, canopy leaves exposed to more wind and lower humidity should be more effective at cooling when $T_{air}$ exceeds physiological optima (Fig. `r fig_leaf_T`).
 
-Tolerance to multiple biophysical and biological stressors can differ among tree size classes, which has shown to increase with tree height and light due to greater non-structural carbon (NSC) reserves, with smaller understory trees being more sensitive to stress [@niinemetsResponsesForestTrees2010a]. This can also alter tree growth patterns. Particularly higher temperatures has shown to primarily reduce tree growth by altering water availability, in mesic temperate and subtropical eucalytus forests [@bowmanWarmerWorldWill2014]. Evidence in tropical forests also shows that higher nighttime temperatures is associated with decelarating tree growth rates predominantly in smaller trees but also in taller trees, perhaps due to increase in nighttime metabolic respiration that could supresses growth [*Clark 2010; 2013; Feeley et al. 2007*]. . 
+Tolerance to multiple biophysical and biological stressors can differ among tree size classes, which has shown to increase with tree height and light, and resultant non-structural carbon (NSC) reserves, with smaller understory trees being more sensitive to stress [@niinemetsResponsesForestTrees2010a]. Autotrophic respiration also increases with stand age that declines NPP, whereas GPP increases with associated morphological and anatomical complexity with age [PW West, 2019]. This difference can alter tree growth patterns in response to biophysical conditions. Particularly higher temperatures has shown to primarily reduce tree growth by altering water availability, in mesic temperate and subtropical eucalytus forests [@bowmanWarmerWorldWill2014]. Evidence in tropical forests also shows that higher nighttime temperatures is associated with decelarating tree growth rates predominantly in smaller trees but also in taller trees, perhaps due to increase in nighttime metabolic respiration that could supresses growth [*Clark 2010; 2013; Feeley et al. 2007*]. . 
 
 **There is also recently emerging evidence that understory trees tend to exhibit greater growth declines with $T_{air}$ under mesic conditions.** 
 In eight forests across the northeast United States, growth rates of understory trees declined sharply at higher $T_{air}$ [Fig `r fig_treerings` **???**; @rollinsonClimateSensitivityUnderstory].
 This pattern is initially counter-intuitive in that sun-exposed leaves can experience greater elevation of $T_{leaf}$ over $T_{air}$ than shade leaves (Fig. `r fig_leaf_T` **???**). 
  It is also possible that higher temperatures reduce understorty tree growth in these forests through an indirect mechanism, such as accelerated competition under warmer temperatures. In other cases, warming is associated with taller understory trees with lower LMA that complete their lifecycle under closed-canopy temperate forests [@maesPlantFunctionalTrait2020]. 
 
-Phenologically in temperate deciduous and mesic forests, understory growth can be more sensitive to annual warming than canopy, showing earlier spring onset and later autumn senescense [Zohnner and Renner, 2019]. Increase in summer temperature is also associated with reduced forest carbon storage [@oishiWarmerTemperaturesReduce2018]. However, late spring, short-term heat waves can negatively impact partially-expanded canopy leaves more than understory saplings that are buffered, by inducing leaf shedding and decreasing photosynthesis and C uptake in reflushed leaves [@filewodImpactsSpringHeat2014].
+Phenologically in temperate deciduous and mesic forests, understory growth can be more sensitive to annual warming than canopy, showing earlier spring onset and later autumn senescense [Zohnner and Renner, 2019].  However, late spring, short-term heat waves can negatively impact partially-expanded canopy leaves more than understory saplings that are buffered, by inducing leaf shedding and decreasing photosynthesis and C uptake in reflushed leaves [@filewodImpactsSpringHeat2014]. Increase in summer temperature is also associated with reduced forest carbon storage [@oishiWarmerTemperaturesReduce2018].
 
 
 *In this section we could perhaps also consider differences in biomass distribution between canopy trees an understory plants, and what that may mean for performance at high temperature. What I'm thinking is the temperature sensitivity of respiration that applies to leaves, stems, and roots, and even though thermal acclimation of leaf respiration is common, much less is known about acclimation of stem and root respiration, and incomplete acclimation still increases the respiration load at higher temperature. It is possible that an increased respiration load is more disadvantageous for understory plants because 1), I suspect that a greater fraction of their total biomass is life biomass that respires (as opposed dead heartwood in the stems of big trees), and 2), because they operate closer to their light compensation point, so if they lose more carbon in respiration, they would need  to make up for lost carbon in photosynthesis, but might lack sunlight to do so*
@@ -399,9 +399,9 @@ Canopy structure affects understory species composition and soil fertility which
 ###warming
 Warming shifts forest composition, from leaf metabolism to whole forest structure. At a leaf metabolism level, fluxnet global analysis shows that with temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum, beyond this inflection point, photosynthesis declines whereas respiration increases exponentially, therfore, moving from carbon sink to carbon source, independent of water and irradiance [@duffyHowCloseAre2021]. However, taken into account light-induced lower leaf respiration in the day, partionationing of C losses differ diurnally and seasonally across ecosytems [Keenan et al. 2019]. However, nitrogen that is particularly essential for plant metabolic processes has also shown to decline in forests with warming [Pamela templer et al.].  Temperature driven photosynthesis limitation is also reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. 
 
-Feedback loops from loss of big trees through natural disturbance or anthropogenic (e.g.@senfCanopyMortalityHas2018a, 2020;  @mcdowellMechanismsPlantSurvival2008; Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a] would increase canopy roughness, and reductions in canopy cover is associated with reduced canopy structural complexity [@senfMappingForestDisturbance2020]. Leading to altered biophysical gradient with local heating effects [@zellweger_forest_2020; @starkReframingTropicalSavannization2020], non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. 
+Feedback loops from loss of big trees through natural or anthropogenic disturbance (e.g.@senfCanopyMortalityHas2018a, 2020;  @mcdowellMechanismsPlantSurvival2008; Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a] would increase canopy roughness, and reductions in canopy cover is associated with reduced canopy structural complexity [@senfMappingForestDisturbance2020]. Leading to altered biophysical gradient with local heating effects [@zellweger_forest_2020; @starkReframingTropicalSavannization2020], non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. 
 
-In the face of global climate change, resiliency among forests are also observed, such as African rainforests [Amy Bennett's new paper] that are more resilient to warming and drought than other forests. Increasing temperature acclimation among tropical and boreal species [martijn's papers; Danielle Way's papers; Atkin's papers] and reversible recovery of canopy heat stress [Smith et al. 2020] are other mechanisms [for eg. *REF*] that will help forests cope with warming.
+In the face of global climate change, resiliency among forests also stand out, such as African rainforests [Amy Bennett's new paper] that are more resilient to warming and drought than other forests. Increasing temperature acclimation among tropical and boreal species [martijn's papers; Danielle Way's papers; Atkin's papers] and reversible recovery of canopy heat stress [Smith et al. 2020] are other mechanisms [for eg. *REF*] that will help forests cope with warming.
 
 These shifts in forest structure at large may be detectable by lidar and thermal remote sensing. If we know how metabolism maps to the thermal profile, then the observed forest structural changes can inform prediction of forest function.
  
